--- a/Web application workspace/eJkiva_web_project/src/main/webapp/css/style.css
+++ b/Web application workspace/eJkiva_web_project/src/main/webapp/css/style.css
@@ -2,9 +2,6 @@
 
 *{
 	
-}
-
-body{
 	--main-bg-color: #43bcff;
 	--main-text-color: white;
 	--article-bg-color: #6ac5d4;
@@ -13,13 +10,19 @@ body{
 	--main-font-size: 1em; 
 	--main-font-family: "Liberation Serif Italic", "Times New Roman", Serif;
     --main-font-style: italic;
+	height:100vh;
+	width:100vw;	
+}
+
+body{
+	
     
 }
 
-.start{
-	background-color: var(----main-bg-color)
+.main{
+	background-color: #ff8080;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
-a{
-	
-}
