--- a/Web application workspace/eJkiva_web_project/src/main/webapp/css/style.css
+++ b/Web application workspace/eJkiva_web_project/src/main/webapp/css/style.css
@@ -10,19 +10,19 @@
 	--main-font-size: 1em; 
 	--main-font-family: "Liberation Serif Italic", "Times New Roman", Serif;
     --main-font-style: italic;
-	height:100vh;
-	width:100vw;	
 }
 
 body{
 	
     
+	height:100vh;
+	width:100vw;	
 }
 
 .main{
 	background-color: #ff8080;
     display: flex;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
