--- a/eJkiva/src/main/webapp/css/customerStyle.css
+++ b/eJkiva/src/main/webapp/css/customerStyle.css
@@ -1,10 +1,58 @@
 @charset "ISO-8859-1";
 
-#products{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+@media ( max-width : 767.98px) {
+	#products {
+		display: grid;
+		grid-template-columns: 1fr;
+		text-align: center;
+	}
+	#product {
+		border-style: solid;
+		border-width: 1px;
+		border-radius: 20px;
+		margin: 10px;
+	}
+	#buttonsCust {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+	#buttonsProd {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	
+	#buttons {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	}
+	#productsCart {
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+	#buttonsProd{
+		diplay:grid;
+		grid-template-columns:1fr;
+	
+	}
+	#anadirX{	
+		display:grid;
+		grid-template-columns:1fr 1fr;
+	}
 }
 
-#product{
-	
+@media ( min-width : 767.98px) {
+	#products {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	#productsCarta {
+		display: grid;
+		
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	#productsCart {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+
+	}
 }
