--- a/eJkiva/src/main/webapp/css/customerStyle.css
+++ b/eJkiva/src/main/webapp/css/customerStyle.css
@@ -47,4 +47,10 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 	}
+	
+	#buttons{	
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+	
+	}
 }
