--- a/eJkiva/src/main/webapp/css/customerStyle.css
+++ b/eJkiva/src/main/webapp/css/customerStyle.css
@@ -1,5 +1,12 @@
 @charset "ISO-8859-1";
 
+img{
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	}
+
+
 @media ( max-width : 767.98px) {
 	#products {
 		display: grid;
